# staticauth

./: Cargo.toml
.github/workflows/: build.yaml
resources/: signin.html
src/: app.rs  main.rs  service.rs
src/app/: auth.rs  router.rs
src/service/: headers.rs  page.rs  redirection.rs  router.rs  session.rs
src/service/page/: signin.html
