[package]
name = "staticauth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
axum = { version = "0.6.20", features = ["form", "query"] }
axum-extra = { version = "0.8.0", features = ["cookie-signed"] }
chrono = { version = "0.4.31", features = ["serde", "clock"] }
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
handlebars = "4.4.0"
hex = "0.4.3"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.2"
url = "2.4.1"
